HTML docs: miscellaneous markup fixes

--- a/files/en-us/web/html/attributes/rel/index.html
+++ b/files/en-us/web/html/attributes/rel/index.html
@@ -380,13 +380,13 @@ tags:
 		<tr>
 			<td>{{SpecName("HTML3.2", "#link", "&lt;link&gt;")}}</td>
 			<td>
-			<p>{{Spec2("HTML3.2")}}<span class="spec-Obsolete"> (Obsolete)</span></p>
+			<p>{{Spec2("HTML3.2")}} (Obsolete)</p>
 			</td>
 			<td>Added <code>top</code>, <code>contents</code>, <code>index</code>, <code>glossary</code>, <code>copyright</code>, <code>next</code>, <code>previous</code>, <code>help</code>, and <code>search</code>.</td>
 		</tr>
 		<tr>
 			<td>{{RFC(1866, "HTML 2.0")}}</td>
-			<td>{{Spec2("HTML2.0")}}<span class="spec-Obsolete">(Obsolete)</span></td>
+			<td>{{Spec2("HTML2.0")}} (Obsolete)</td>
 			<td>Initial definition.</td>
 		</tr>
 	</tbody>
