--- a/files/en-us/web/html/element/address/index.html
+++ b/files/en-us/web/html/element/address/index.html
@@ -107,5 +107,5 @@ browser-compat: html.elements.address
 
 <ul>
  <li>Others section-related elements: {{HTMLElement("body")}}, {{HTMLElement("nav")}}, {{HTMLElement("article")}}, {{HTMLElement("aside")}}, {{HTMLElement("h1")}}, {{HTMLElement("h2")}}, {{HTMLElement("h3")}}, {{HTMLElement("h4")}}, {{HTMLElement("h5")}}, {{HTMLElement("h6")}}, {{HTMLElement("hgroup")}}, {{HTMLElement("footer")}}, {{HTMLElement("section")}}, {{HTMLElement("header")}};</li>
- <li class="last"><a class="deki-ns current" href="/en-US/docs/Web/HTML/Element/Heading_Elements" title="Sections and Outlines of an HTML5 document">Sections and outlines of an HTML5 document</a>.</li>
+ <li><a href="/en-US/docs/Web/HTML/Element/Heading_Elements">Sections and outlines of an HTML5 document</a>.</li>
 </ul>
