--- a/files/en-us/web/html/element/details/index.html
+++ b/files/en-us/web/html/element/details/index.html
@@ -182,7 +182,7 @@ details[open] > summary {
 
 <h4 id="CSS_2">CSS</h4>
 
-<pre class="brush: css; highlight:[12, 15-17]">details {
+<pre class="brush: css">details {
   font: 16px "Open Sans", Calibri, sans-serif;
   width: 620px;
 }
