--- a/files/en-us/web/html/element/input/checkbox/index.html
+++ b/files/en-us/web/html/element/input/checkbox/index.html
@@ -125,7 +125,7 @@ browser-compat: html.elements.input.input-checkbox
 
 <p>{{EmbedLiveSample('Handling_multiple_checkboxes', 600, 100)}}</p>
 
-<p>In this example you will see that we've given each checkbox the same <code>name</code>. If both checkboxes are checked and then the form is submitted, you'll get a string of name/value pairs submitted like this: <code>interest=coding&amp;interest=music</code>. When this string reaches the server, you need to parse it other than as an associative array, so all values, not only the last value, of <code>interest</code> are captured. For one technique used with PHP, see <a class="question-hyperlink" href="https://stackoverflow.com/questions/18745456/handle-multiple-checkboxes-with-a-single-serverside-variable">Handle Multiple Checkboxes with a Single Serverside Variable</a>, for example.</p>
+<p>In this example you will see that we've given each checkbox the same <code>name</code>. If both checkboxes are checked and then the form is submitted, you'll get a string of name/value pairs submitted like this: <code>interest=coding&amp;interest=music</code>. When this string reaches the server, you need to parse it other than as an associative array, so all values, not only the last value, of <code>interest</code> are captured. For one technique used with PHP, see <a href="https://stackoverflow.com/questions/18745456/handle-multiple-checkboxes-with-a-single-serverside-variable">Handle Multiple Checkboxes with a Single Serverside Variable</a>, for example.</p>
 
 <h3 id="Checking_boxes_by_default">Checking boxes by default</h3>
 
