--- a/files/en-us/web/html/element/progress/index.html
+++ b/files/en-us/web/html/element/progress/index.html
@@ -79,7 +79,7 @@ browser-compat: html.elements.progress
 
 <p>On Windows 7, the resulting progress looks like this:</p>
 
-<p><img alt="progress-firefox.JPG" class="default internal" src="progress-firefox.jpg"></p>
+<p><img alt="progress-firefox.JPG" src="progress-firefox.jpg"></p>
 
 <h2 id="Specifications">Specifications</h2>
 
