--- a/files/en-us/web/html/element/source/index.html
+++ b/files/en-us/web/html/element/source/index.html
@@ -60,7 +60,7 @@ browser-compat: html.elements.source
 
 <dl>
  <dt>{{htmlattrdef("media")}}</dt>
- <dd><a class="internal" href="/en-US/docs/Web/CSS/Media_Queries">Media query</a> of the resource's intended media.</dd>
+ <dd><a href="/en-US/docs/Web/CSS/Media_Queries">Media query</a> of the resource's intended media.</dd>
  <dt>{{htmlattrdef("sizes")}}</dt>
  <dd>
  <p>Is a list of source sizes that describes the final rendered width of the image represented by the source. Each source size consists of a comma-separated list of media condition-length pairs. This information is used by the browser to determine, before laying the page out, which image defined in {{htmlattrxref("srcset", "source")}} to use. Please note that <code>sizes</code> will have its effect only if width dimension descriptors are provided with <code>srcset</code> instead of pixel ratio values (200w instead of 2x for example).</p>
