--- a/files/en-us/web/html/element/span/index.html
+++ b/files/en-us/web/html/element/span/index.html
@@ -59,7 +59,7 @@ browser-compat: html.elements.span
 
 <h4 id="HTML">HTML</h4>
 
-<pre class="brush:html gutter:false">&lt;p&gt;&lt;span&gt;Some text&lt;/span&gt;&lt;/p&gt;</pre>
+<pre class="brush:html">&lt;p&gt;&lt;span&gt;Some text&lt;/span&gt;&lt;/p&gt;</pre>
 
 <h4 id="Result">Result</h4>
 
@@ -69,7 +69,7 @@ browser-compat: html.elements.span
 
 <h4 id="HTML_2">HTML</h4>
 
-<pre class="brush:html gutter:false">&lt;li&gt;&lt;span&gt;
+<pre class="brush:html">&lt;li&gt;&lt;span&gt;
     &lt;a href="portfolio.html" target="_blank"&gt;See my portfolio&lt;/a&gt;
 &lt;/span&gt;&lt;/li&gt;
 </pre>
