--- a/files/en-us/web/html/global_attributes/itemid/index.html
+++ b/files/en-us/web/html/global_attributes/itemid/index.html
@@ -41,7 +41,7 @@ browser-compat: html.global_attributes.itemid
    <td rowspan="4">itemscope</td>
    <td>itemtype: itemid</td>
    <td colspan="2">
-    <div class="jyrRxf-eEDwDf jcd3Mb IZ65Hb-hUbt4d">http://vocab.example.net/book: urn:isbn:0-330-34032-8</div>
+    http://vocab.example.net/book: urn:isbn:0-330-34032-8
    </td>
   </tr>
   <tr>
@@ -53,7 +53,7 @@ browser-compat: html.global_attributes.itemid
    <td>itemprop</td>
    <td>author</td>
    <td>
-    <div class="jyrRxf-eEDwDf jcd3Mb">Peter F. Hamilton</div>
+    Peter F. Hamilton
    </td>
   </tr>
   <tr>
