--- a/files/en-us/web/html/global_attributes/nonce/index.html
+++ b/files/en-us/web/html/global_attributes/nonce/index.html
@@ -50,7 +50,7 @@ crypto.randomBytes(16).toString('base64');
 <a href="/en-US/docs/Web/HTTP/Headers/Content-Security-Policy"><code>Content-Security-Policy</code></a> header
 (prepend <code>nonce-</code>):</p>
 
-<pre class="brush: http">Content-Security-Policy: script-src 'nonce-8IBTHwOdqNKAWeKl7plt8g=='</pre>
+<pre>Content-Security-Policy: script-src 'nonce-8IBTHwOdqNKAWeKl7plt8g=='</pre>
 
 <h3>Accessing nonces and nonce hiding</h3>
 
