--- a/files/en-us/web/html/viewport_meta_tag/index.html
+++ b/files/en-us/web/html/viewport_meta_tag/index.html
@@ -35,8 +35,8 @@ tags:
 
 <p>The <code>initial-scale</code> property controls the zoom level when the page is first loaded. The <code>maximum-scale</code>, <code>minimum-scale</code>, and <code>user-scalable</code> properties control how users are allowed to zoom the page in or out.</p>
 
-<div class="blockIndicator warning">
-<p>Usage of <code>user-scalable=no</code> can cause accessibility issues to users with visual impairments such as low vision.</p>
+<div class="warning">
+<p><strong>Warning:</strong> Usage of <code>user-scalable=no</code> can cause accessibility issues to users with visual impairments such as low vision.</p>
 </div>
 
 <h2 id="A_pixel_is_not_a_pixel">A pixel is not a pixel</h2>
