--- a/files/en-us/web/html/element/blockquote/index.html
+++ b/files/en-us/web/html/element/blockquote/index.html
@@ -70,7 +70,7 @@ browser-compat: html.elements.blockquote
 
 <h2 id="Example">Example</h2>
 
-<p>This example demonstrates the use of the <code>&lt;blockquote&gt;</code> element to quote a passage from {{RFC(1149)}}, <cite>A Standard for the Transmission of IP Datagrams on Avian Carriers.</cite></p>
+<p>This example demonstrates the use of the <code>&lt;blockquote&gt;</code> element to quote a passage from {{RFC(1149)}}, <em>A Standard for the Transmission of IP Datagrams on Avian Carriers</em>.</p>
 
 <pre class="brush: html">&lt;blockquote cite="https://datatracker.ietf.org/doc/html/rfc1149"&gt;
   &lt;p&gt;Avian carriers can provide high delay, low
