--- a/files/en-us/web/html/element/input/date/index.html
+++ b/files/en-us/web/html/element/input/date/index.html
@@ -60,7 +60,7 @@ browser-compat: html.elements.input.input-date
 <p>{{EmbedLiveSample('Value', 600, 40)}}</p>
 
 <div class="notecard note">
-<p><strong>The displayed date format will differ from the actual <code>value</code></strong> — the displayed date is formatted <em>based on the locale of the user's browser</em>, but the parsed <code>value</code> is always formatted <code>yyyy-mm-dd</code>.</p>
+<p><strong>Note:</strong> The displayed date format will differ from the actual <code>value</code>. The displayed date is formatted based on the locale of the user's browser, but the parsed <code>value</code> is always formatted <code>yyyy-mm-dd</code>.</p>
 </div>
 
 <p>You can get and set the date value in JavaScript with the {{domxref("HTMLInputElement")}} <code>value</code> and <code>valueAsNumber</code> properties. For example:</p>
