--- a/files/en-us/web/html/element/meta/name/theme-color/index.html
+++ b/files/en-us/web/html/element/meta/name/theme-color/index.html
@@ -19,9 +19,8 @@ browser-compat: html.elements.meta.name.theme-color
 
 <p>The following image shows the effect that the {{htmlelement("meta")}} element above will have on a document displayed in Chrome running on an Android mobile device.</p>
 
-<figure><img alt="Image showing the effect of using theme-color" src="theme-color.png">
-<figcaption><small>Image credit: from <a href="https://developers.google.com/web/fundamentals/design-and-ux/browser-customization">Icons &amp; Browser Colors</a>, created and <a href="https://developers.google.com/readme/policies">shared by Google</a> and used according to terms described in the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 Attribution License</a>.</small></figcaption>
-</figure>
+<img alt="Image showing the effect of using theme-color" src="theme-color.png">
+<p><em>Image credit: from <a href="https://developers.google.com/web/fundamentals/design-and-ux/browser-customization">Icons &amp; Browser Colors</a>, created and <a href="https://developers.google.com/readme/policies">shared by Google</a> and used according to terms described in the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 Attribution License</a>.</em></p>
 
 <p>You can provide a media type or query inside the {{htmlattrxref("media", "meta")}} attribute; the color will then only be set if the media condition is true. For example:</p>
 
