--- a/files/en-us/web/html/global_attributes/index.html
+++ b/files/en-us/web/html/global_attributes/index.html
@@ -48,7 +48,7 @@ browser-compat: html.global_attributes
  </ul>
  </dd>
  <dt><a href="/en-US/docs/Web/HTML/Global_attributes/contextmenu">{{HTMLAttrDef("contextmenu")}}</a> {{deprecated_inline}}</dt>
- <dd>The <code><a href="#attr-id"><strong>id</strong></a></code> of a {{HTMLElement("menu")}} to use as the contextual menu for this element.</dd>
+ <dd>The <a href="#attr-id"><strong><code>id</code></strong></a> of a {{HTMLElement("menu")}} to use as the contextual menu for this element.</dd>
  <dt><a href="/en-US/docs/Web/HTML/Global_attributes/data-*">{{HTMLAttrDef("data-*")}}</a></dt>
  <dd>Forms a class of attributes, called custom data attributes, that allow proprietary information to be exchanged between the <a href="/en-US/docs/Web/HTML">HTML</a> and its {{glossary("DOM")}} representation that may be used by scripts. All such custom data are available via the {{DOMxRef("HTMLElement")}} interface of the element the attribute is set on. The {{DOMxRef("HTMLElement.dataset")}} property gives access to them.</dd>
  <dt><a href="/en-US/docs/Web/HTML/Global_attributes/dir">{{HTMLAttrDef("dir")}}</a></dt>
