Remove syntax highlighting on code elements

--- a/files/en-us/web/html/attributes/step/index.html
+++ b/files/en-us/web/html/attributes/step/index.html
@@ -32,37 +32,37 @@ tags:
   <tr>
    <td>{{HTMLElement("input/date", "date")}}</td>
    <td>1 (day)</td>
-   <td><code class="brush: html">&lt;input type="date" min="2019-12-25" step="1"&gt;</code></td>
+   <td><code>&lt;input type="date" min="2019-12-25" step="1"&gt;</code></td>
   </tr>
   <tr>
    <td>{{HTMLElement("input/month", "month")}}</td>
    <td>1 (month)</td>
-   <td><code class="brush: html">&lt;input type="month" min="2019-12" step="12"&gt;</code></td>
+   <td><code>&lt;input type="month" min="2019-12" step="12"&gt;</code></td>
   </tr>
   <tr>
    <td>{{HTMLElement("input/week", "week")}}</td>
    <td>1 (week)</td>
-   <td><code class="brush: html">&lt;input type="week" min="2019-W23" step="2"&gt;</code></td>
+   <td><code>&lt;input type="week" min="2019-W23" step="2"&gt;</code></td>
   </tr>
   <tr>
    <td>{{HTMLElement("input/time", "time")}}</td>
    <td>60 (seconds)</td>
-   <td><code class="brush: html">&lt;input type="time" min="09:00" step="900"&gt;</code></td>
+   <td><code>&lt;input type="time" min="09:00" step="900"&gt;</code></td>
   </tr>
   <tr>
    <td>{{HTMLElement("input/datetime-local", "datetime-local")}}</td>
    <td>1 (day)</td>
-   <td><code class="brush: html">&lt;input type="datetime-local" min="019-12-25T19:30" step="7"&gt;</code></td>
+   <td><code>&lt;input type="datetime-local" min="019-12-25T19:30" step="7"&gt;</code></td>
   </tr>
   <tr>
    <td>{{HTMLElement("input/number", "number")}}</td>
    <td>1</td>
-   <td><code class="brush: html">&lt;input type="number" min="0" step="0.1" max="10"&gt;</code></td>
+   <td><code>&lt;input type="number" min="0" step="0.1" max="10"&gt;</code></td>
   </tr>
   <tr>
    <td>{{HTMLElement("input/range", "range")}}</td>
    <td>1</td>
-   <td><code class="brush: html">&lt;input type="range" min="0" step="2" max="10"&gt;</code></td>
+   <td><code>&lt;input type="range" min="0" step="2" max="10"&gt;</code></td>
   </tr>
  </tbody>
 </table>
