Fix paragraphs that want to be notes

--- a/files/en-us/web/html/attributes/capture/index.html
+++ b/files/en-us/web/html/attributes/capture/index.html
@@ -36,7 +36,7 @@ tags:
 	</tbody>
 </table>
 
-<p class="note">Note: capture was previously a Boolean attribute which, if present, requested that the device's media capture device(s) such as camera or microphone be used instead of requesting a file input.</p>
+<div class="note"><p><strong>Note:</strong> Capture was previously a Boolean attribute which, if present, requested that the device's media capture device(s) such as camera or microphone be used instead of requesting a file input.</p></div>
 
 <div class="hidden">
 <pre class="brush: html"></pre>
