--- a/files/en-us/web/html/global_attributes/itemid/index.html
+++ b/files/en-us/web/html/global_attributes/itemid/index.html
@@ -19,7 +19,7 @@ browser-compat: html.global_attributes.itemid
 
 <p>The exact meaning of an <code>itemtype</code>'s global identifier is provided by the definition of that identifier within the specified vocabulary. The vocabulary defines whether several items with the same global identifier can coexist and, if so, how items with the same identifier are handled.</p>
 
-<p class="note"><strong>Note:</strong> The {{glossary("WHATWG")}} definition specifies that an <code>itemid</code> must be a {{glossary("URL")}}. However, the following example correctly illustrates that a {{glossary("URN")}} may also be used. This inconsistency may reflect the incomplete nature of the Microdata specification.</p>
+<div class="note"><p><strong>Note:</strong> The {{glossary("WHATWG")}} definition specifies that an <code>itemid</code> must be a {{glossary("URL")}}. However, the following example correctly illustrates that a {{glossary("URN")}} may also be used. This inconsistency may reflect the incomplete nature of the Microdata specification.</p></div>
 
 <h2 id="Example">Example</h2>
 
