--- a/files/en-us/web/html/global_attributes/itemprop/index.html
+++ b/files/en-us/web/html/global_attributes/itemprop/index.html
@@ -281,7 +281,7 @@ browser-compat: html.global_attributes.itemprop
  </li>
 </ol>
 
-<p class="note"><strong>Note:</strong> the rules above disallow ":" characters in non-URL values because otherwise they could not be distinguished from URLs. Values with "." characters are reserved for future extensions. Space characters are disallowed because otherwise the values would be parsed as multiple tokens.</p>
+<div class="note"><p><strong>Note:</strong> The rules above disallow ":" characters in non-URL values because otherwise they could not be distinguished from URLs. Values with "." characters are reserved for future extensions. Space characters are disallowed because otherwise the values would be parsed as multiple tokens.</p></div>
 
 <h2 id="Values">Values</h2>
 
