--- a/files/en-us/web/html/global_attributes/itemref/index.html
+++ b/files/en-us/web/html/global_attributes/itemref/index.html
@@ -18,7 +18,7 @@ browser-compat: html.global_attributes.itemref
 
 <p>The <code>itemref</code> attribute can only be specified on elements that have an <code>itemscope</code> attribute specified.</p>
 
-<p class="note"><strong>Note:</strong> the <code>itemref</code> attribute is not part of the microdata data model. It is merely a syntactic construct to aid authors in adding annotations to pages where the data to be annotated does not follow a convenient tree structure. For example, it allows authors to mark up data in a table so that each column defines a separate item while keeping the properties in the cells.</p>
+<div class="note"><p><strong>Note:</strong> The <code>itemref</code> attribute is not part of the microdata data model. It is merely a syntactic construct to aid authors in adding annotations to pages where the data to be annotated does not follow a convenient tree structure. For example, it allows authors to mark up data in a table so that each column defines a separate item while keeping the properties in the cells.</p></div>
 
 <h2 id="Example">Example</h2>
 
