HTML docs: Remove hidden divs

--- a/files/en-us/web/html/attributes/accept/index.html
+++ b/files/en-us/web/html/attributes/accept/index.html
@@ -83,11 +83,9 @@ tags:
  &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">div {
+<pre class="brush: css hidden">div {
   margin-bottom: 10px;
 }</pre>
-</div>
 
 <p>This produces the following output:</p>
 
@@ -127,11 +125,9 @@ tags:
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">div {
+<pre class="brush: css hidden">div {
   margin-bottom: 10px;
 }</pre>
-</div>
 
 <p>{{EmbedLiveSample('Limiting_accepted_file_types', 650, 60)}}</p>
 
