--- a/files/en-us/web/html/attributes/multiple/index.html
+++ b/files/en-us/web/html/attributes/multiple/index.html
@@ -62,9 +62,7 @@ tags:
   &lt;option value="doc@woodworkers.com"&gt;Doc&lt;/option&gt;
 &lt;/datalist&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">input:invalid {border: red solid 3px;}</pre>
-</div>
+<pre class="brush: css hidden">input:invalid {border: red solid 3px;}</pre>
 
 <p>If and only if the <code>multiple</code> attribute is specified, the value can be a list of properly-formed comma-separated e-mail addresses. Any trailing and leading whitespace is removed from each address in the list. If the <code><a href="/en-US/docs/Web/HTML/Attributes/required">required</a></code> attribute is present, at least one email address is required.</p>
 
