--- a/files/en-us/web/html/attributes/pattern/index.html
+++ b/files/en-us/web/html/attributes/pattern/index.html
@@ -78,8 +78,7 @@ tags:
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">div {
+<pre class="brush: css hidden">div {
   margin-bottom: 10px;
   position: relative;
 }
@@ -104,7 +103,6 @@ input:valid+span:after {
   content: '✓';
   padding-left: 5px;
 }</pre>
-</div>
 
 <p>This renders like so:</p>
 
