--- a/files/en-us/web/html/attributes/readonly/index.html
+++ b/files/en-us/web/html/attributes/readonly/index.html
@@ -76,8 +76,7 @@ tags:
 
 <h2 id="Examples">Examples</h2>
 
-<div class="hidden">
-<pre class="brush: html">&lt;fieldset&gt;
+<pre class="brush: html hidden">&lt;fieldset&gt;
   &lt;legend&gt;Checkboxes buttons&lt;/legend&gt;
   &lt;p&gt;&lt;label&gt;
     &lt;input type="checkbox" name="chbox" value="regular"&gt; Regular
@@ -103,7 +102,6 @@ tags:
 &lt;/fieldset&gt;</pre>
 
 <p>{{EmbedLiveSample('Examples', 500, 200)}}</p>
-</div>
 
 <h2 id="Specifications">Specifications</h2>
 
