--- a/files/en-us/web/html/element/a/index.html
+++ b/files/en-us/web/html/element/a/index.html
@@ -219,11 +219,7 @@ browser-compat: html.elements.a
 &lt;a href="./p"&gt;Directory-relative URL&lt;/a&gt;
 </pre>
 
-<div class="hidden">
-<h4 id="CSS">CSS</h4>
-
-<pre class="brush: css">a { display: block; margin-bottom: 0.5em }</pre>
-</div>
+<pre class="brush: css hidden">a { display: block; margin-bottom: 0.5em }</pre>
 
 <h4 id="Result_2">Result</h4>
 
