--- a/files/en-us/web/html/element/caption/index.html
+++ b/files/en-us/web/html/element/caption/index.html
@@ -107,8 +107,7 @@ browser-compat: html.elements.caption
   &lt;/tr&gt;
 &lt;/table&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">caption {
+<pre class="brush: css hidden">caption {
   caption-side: top;
 }
 table {
@@ -119,7 +118,6 @@ table, th, td {
   border: 1px solid black;
 }
 </pre>
-</div>
 
 <p>{{EmbedLiveSample('Example', 650, 100)}}</p>
 
