--- a/files/en-us/web/html/element/input/button/index.html
+++ b/files/en-us/web/html/element/input/button/index.html
@@ -208,8 +208,7 @@ function disableButton() {
   &lt;p&gt;Add suitable fallback here.&lt;/p&gt;
 &lt;/canvas&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   background: #ccc;
   margin: 0;
   overflow: hidden;
@@ -236,7 +235,6 @@ span {
   position: relative;
   bottom: 5px;
 }</pre>
-</div>
 
 <pre class="brush: js">var canvas = document.querySelector('.myCanvas');
 var width = canvas.width = window.innerWidth;
