--- a/files/en-us/web/html/element/input/file/index.html
+++ b/files/en-us/web/html/element/input/file/index.html
@@ -141,11 +141,9 @@ browser-compat: html.elements.input.input-file
  &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">div {
+<pre class="brush: css hidden">div {
   margin-bottom: 10px;
 }</pre>
-</div>
 
 <p>This produces the following output:</p>
 
@@ -210,11 +208,9 @@ browser-compat: html.elements.input.input-file
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">div {
+<pre class="brush: css hidden">div {
   margin-bottom: 10px;
 }</pre>
-</div>
 
 <p>This produces a similar-looking output to the previous example:</p>
 
@@ -268,8 +264,7 @@ input.value = "foo";
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">html {
+<pre class="brush: css hidden">html {
   font-family: sans-serif;
 }
 
@@ -322,7 +317,6 @@ form label:active, form button:active {
   background-color: #0D3F8F;
   color: white;
 }</pre>
-</div>
 
 <p>This is similar to what we've seen before — nothing special to comment on.</p>
 
