--- a/files/en-us/web/html/element/input/tel/index.html
+++ b/files/en-us/web/html/element/input/tel/index.html
@@ -319,8 +319,7 @@ input:valid+span:after {
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">div {
+<pre class="brush: css hidden">div {
   margin-bottom: 10px;
   position: relative;
 }
@@ -345,7 +344,6 @@ input:valid+span:after {
   padding-left: 5px;
   color: #009000;
 }</pre>
-</div>
 
 <p>{{EmbedLiveSample("Pattern_validation", 700, 70)}}</p>
 
@@ -448,8 +446,7 @@ selectElem.onchange = function() {
 
 <p>It makes you wonder if it is worth going to all this trouble on the client-side, when you could just let the user enter their number in whatever format they wanted on the client-side and then validate and sanitize it on the server. But this choice is yours to make.</p>
 
-<div class="hidden">
-<pre class="brush: css">div {
+<pre class="brush: css hidden">div {
 margin-bottom: 10px;
 position: relative;
 }
@@ -474,7 +471,6 @@ input:valid+span:after {
   padding-left: 5px;
   color: #009000;
 }</pre>
-</div>
 
 <h2 id="Specifications">Specifications</h2>
 
