--- a/files/en-us/web/html/element/input/url/index.html
+++ b/files/en-us/web/html/element/input/url/index.html
@@ -306,8 +306,7 @@ browser-compat: html.elements.input.input-url
 
 <p>Since inputs of type <code>url</code> validate against both the standard URL validation <em>and</em> the specified {{htmlattrxref("pattern", "input")}}, you can implement this easily. Let's see how:</p>
 
-<div class="hidden">
-<pre class="brush: css">div {
+<pre class="brush: css hidden">div {
   margin-bottom: 10px;
   position: relative;
   }
@@ -330,7 +329,6 @@ browser-compat: html.elements.input.input-url
     content: '✓';
     padding-left: 5px;
   }</pre>
-</div>
 
 <pre class="brush: html">&lt;form&gt;
   &lt;div&gt;
