--- a/files/en-us/web/html/element/rtc/index.html
+++ b/files/en-us/web/html/element/rtc/index.html
@@ -66,13 +66,11 @@ browser-compat: html.elements.rtc
 &lt;/div&gt;
 </pre>
 
-<div class="hidden">
-<pre class="brush: css">.info {
+<pre class="brush: css hidden">.info {
   padding-top: 10px;
   font-size: 36px;
 }
 </pre>
-</div>
 
 <p>{{EmbedLiveSample("Examples", 600, 120)}}</p>
 
