--- a/files/en-us/web/html/element/tbody/index.html
+++ b/files/en-us/web/html/element/tbody/index.html
@@ -255,8 +255,7 @@ browser-compat: html.elements.tbody
 
 <h4 id="CSS_2">CSS</h4>
 
-<div class="hidden">
-<pre class="brush: css">table {
+<pre class="brush: css hidden">table {
   border: 2px solid #555;
   border-collapse: collapse;
   font: 16px "Lucida Grande", "Helvetica", "Arial", sans-serif;
@@ -273,7 +272,6 @@ thead &gt; tr &gt; th {
   font-size: 18px;
   border-bottom: 2px solid #999;
 }</pre>
-</div>
 
 <p>Most of the CSS is unchanged. We do, however, add a slightly more subtle style for header cells contained directly within a <code>&lt;tbody&gt;</code> (as opposed to those which reside in a {{HTMLElement("thead")}}). This is used for the headers indicating each table section's corresponding major.</p>
 
