--- a/files/en-us/web/html/element/tr/index.html
+++ b/files/en-us/web/html/element/tr/index.html
@@ -215,15 +215,13 @@ th, td {
 
 <p>The CSS is unchanged from before.</p>
 
-<div class="hidden">
-<pre class="brush: css">table {
+<pre class="brush: css hidden">table {
   border: 1px solid black;
 }
 
 th, td {
   border: 1px solid black;
 }</pre>
-</div>
 
 <h3 id="Explicitly_specifying_table_content_groups">Explicitly specifying table content groups</h3>
 
@@ -275,15 +273,13 @@ th, td {
 
 <p>Once again, we haven't touched the CSS.</p>
 
-<div class="hidden">
-<pre class="brush: css">table {
+<pre class="brush: css hidden">table {
   border: 1px solid black;
 }
 
 th, td {
   border: 1px solid black;
 }</pre>
-</div>
 
 <h4 id="Result_3">Result</h4>
 
@@ -303,8 +299,7 @@ th, td {
 
 <p>{{EmbedLiveSample("Basic_styling", 500, 200)}}</p>
 
-<div class="hidden">
-<pre class="brush: html">&lt;table&gt;
+<pre class="brush: html hidden">&lt;table&gt;
   &lt;thead&gt;
     &lt;tr&gt;
       &lt;th rowspan="2"&gt;Name&lt;/th&gt;
@@ -341,7 +336,6 @@ th, td {
     &lt;/tr&gt;
   &lt;/tbody&gt;
 &lt;/table&gt;</pre>
-</div>
 
 <h4 id="CSS_2">CSS</h4>
 
@@ -378,8 +372,7 @@ th, td {
 
 <p>There is no change to the HTML again. See what proper preparation of your HTML can do for you?</p>
 
-<div class="hidden">
-<pre class="brush: html">&lt;table&gt;
+<pre class="brush: html hidden">&lt;table&gt;
   &lt;thead&gt;
     &lt;tr&gt;
       &lt;th rowspan="2"&gt;Name&lt;/th&gt;
@@ -416,7 +409,6 @@ th, td {
     &lt;/tr&gt;
   &lt;/tbody&gt;
 &lt;/table&gt;</pre>
-</div>
 
 <h4 id="CSS_3">CSS</h4>
 
