--- a/files/en-us/web/html/element/input/search/index.html
+++ b/files/en-us/web/html/element/input/search/index.html
@@ -299,8 +299,7 @@ input:valid ~ span:after {
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">input {
+<pre class="brush: css hidden">input {
   margin-right: 10px;
 }
 
@@ -315,7 +314,6 @@ input:valid ~ span:after {
     padding-left: 5px;
     position: absolute;
 }</pre>
-</div>
 
 <p>This renders like so:</p>
 
@@ -344,8 +342,7 @@ input:valid ~ span:after {
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">input {
+<pre class="brush: css hidden">input {
   margin-right: 10px;
 }
 
@@ -360,7 +357,6 @@ input:valid ~ span:after {
     padding-left: 5px;
     position: absolute;
 }</pre>
-</div>
 
 <p>This renders like so:</p>
 
@@ -385,8 +381,7 @@ input:valid ~ span:after {
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<div class="hidden">
-<pre class="brush: css">input {
+<pre class="brush: css hidden">input {
   margin-right: 10px;
 }
 
@@ -401,7 +396,6 @@ input:valid ~ span:after {
     padding-left: 5px;
     position: absolute;
 }</pre>
-</div>
 
 <p>This renders like so:</p>
 
