--- a/files/en-us/web/html/inline_elements/index.html
+++ b/files/en-us/web/html/inline_elements/index.html
@@ -38,12 +38,7 @@ the inline element's influence.&lt;/div&gt;</pre>
 
 <p>In this example, the {{HTMLElement("div")}} block-level element contains some text. Within that text is a {{HTMLElement("span")}} element, which is an inline element. Because the <code>&lt;span&gt;</code> element is inline, the paragraph correctly renders as a single, unbroken text flow, like this:</p>
 
-<p>{{EmbedLiveSample("Inline", 600, 80)}}</p>
-
-<div class="hidden">
-<p>For looks, this CSS (not displayed in standard reading mode) is also used:</p>
-
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   margin: 0;
   padding: 4px;
   border: 1px solid #333;
@@ -52,7 +47,8 @@ the inline element's influence.&lt;/div&gt;</pre>
 .highlight {
   background-color:#ee3;
 }</pre>
-</div>
+
+<p>{{EmbedLiveSample("Inline", 600, 80)}}</p>
 
 <h3 id="Block-level">Block-level</h3>
 
@@ -62,10 +58,7 @@ the inline element's influence.&lt;/div&gt;</pre>
 its background has been colored to display both the beginning and end of
 the block-level element's influence.&lt;/div&gt;</pre>
 
-<div class="hidden">
-<p>The CSS (not displayed in standard reading mode) is also used:</p>
-
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   margin: 0;
   padding: 4px;
   border: 1px solid #333;
@@ -74,7 +67,6 @@ the block-level element's influence.&lt;/div&gt;</pre>
 .highlight {
   background-color:#ee3;
 }</pre>
-</div>
 
 <p>Rendered using the same CSS as before, we get:</p>
 
