Format CSS sample code

--- a/files/en-us/web/html/element/input/text/index.html
+++ b/files/en-us/web/html/element/input/text/index.html
@@ -306,7 +306,24 @@ input:valid+span:after {
   &lt;/div&gt;
 &lt;/form&gt;</pre>
 
-<pre class="brush: css hidden">div { margin-bottom: 10px; position: relative; } input + span { padding-right: 30px; } input:invalid+span:after { position: absolute; content: '✖'; padding-left: 5px; } input:valid+span:after { position: absolute; content: '✓'; padding-left: 5px; }</pre>
+<pre class="brush: css hidden">
+div {
+  margin-bottom: 10px;
+  position: relative;
+}
+input + span {
+  padding-right: 30px;
+}
+input:invalid+span:after {
+  position: absolute;
+  content: '✖';
+  padding-left: 5px;
+}
+input:valid+span:after {
+  position: absolute;
+  content: '✓';
+  padding-left: 5px;
+}</pre>
 
 <p>This renders like so:</p>
 
