--- a/files/en-us/web/html/attributes/rel/index.html
+++ b/files/en-us/web/html/attributes/rel/index.html
@@ -232,7 +232,7 @@ tags:
 &lt;link rel=alternate href="/fr/pdf" hreflang=fr type=application/pdf title="French PDF"&gt;</pre>
 		</li>
 	</ul>
-  <p class="note">Note: The obsolete <code>rev="made"</code> is treated as <code>rel="alternate"</code></p>
+  <div class="note"><p><strong>Note:</strong> The obsolete <code>rev="made"</code> is treated as <code>rel="alternate"</code></p></div>
 	</dd>
 	<dt>{{htmlattrdef("author")}}</dt>
 	<dd>Indicates the author of the current document or article. Relevant for {{htmlelement('link')}}, {{htmlelement('a')}}, and {{htmlelement('area')}} elements, the <code>author</code> keyword creates a hyperlink. With {{htmlelement('a')}} and {{htmlelement('area')}}, it indicates the linked document (or <code>mailto:</code>) provides information about the author of the nearest {{htmlelement('article')}} ancestor if there is one, otherwise the entire document. For {{htmlelement('link')}}, it represents the author of the entire document.</dd>
@@ -380,13 +380,13 @@ tags:
 		<tr>
 			<td>{{SpecName("HTML3.2", "#link", "&lt;link&gt;")}}</td>
 			<td>
-			<p>{{Spec2("HTML3.2")}}<span class="spec-Obsolete"> (Obsolete)</span></p>
+			<p>{{Spec2("HTML3.2")}} (Obsolete)</p>
 			</td>
 			<td>Added <code>top</code>, <code>contents</code>, <code>index</code>, <code>glossary</code>, <code>copyright</code>, <code>next</code>, <code>previous</code>, <code>help</code>, and <code>search</code>.</td>
 		</tr>
 		<tr>
 			<td>{{RFC(1866, "HTML 2.0")}}</td>
-			<td>{{Spec2("HTML2.0")}}<span class="spec-Obsolete">(Obsolete)</span></td>
+			<td>{{Spec2("HTML2.0")}} (Obsolete)</td>
 			<td>Initial definition.</td>
 		</tr>
 	</tbody>
