--- a/files/en-us/web/html/element/details/index.html
+++ b/files/en-us/web/html/element/details/index.html
@@ -72,7 +72,7 @@ browser-compat: html.elements.details
  <dd>
  <p>This Boolean attribute indicates whether or not the details — that is, the contents of the <code>&lt;details&gt;</code> element — are currently visible. The details are shown when this attribute exists, or hidden when this attribute is absent. By default this attribute is absent which means the details are not visible. </p>
 
- <p class="note"><strong>Note:</strong> You have to remove this attribute entirely to make the details hidden. <code>open="false"</code> makes the details visible because this attribute is Boolean.</p>
+ <div class="note"><p><strong>Note:</strong> You have to remove this attribute entirely to make the details hidden. <code>open="false"</code> makes the details visible because this attribute is Boolean.</p></div>
 </dd>
 </dl>
 
@@ -182,7 +182,7 @@ details[open] > summary {
 
 <h4 id="CSS_2">CSS</h4>
 
-<pre class="brush: css; highlight:[12, 15-17]">details {
+<pre class="brush: css">details {
   font: 16px "Open Sans", Calibri, sans-serif;
   width: 620px;
 }
