HTML docs: Fix up remaining notes, part 1 (#9154)

--- a/files/en-us/web/html/global_attributes/itemprop/index.html
+++ b/files/en-us/web/html/global_attributes/itemprop/index.html
@@ -187,7 +187,7 @@ browser-compat: html.global_attributes.itemprop
 &lt;/div&gt;</pre>
 
 <div class="note">
-<p>Note: There is no relationship between the microdata and the content of the document where the microdata is marked up.</p>
+<p><strong>Note:</strong> There is no relationship between the microdata and the content of the document where the microdata is marked up.</p>
 </div>
 
 <h3 id="Same_structured_data_marked_up_in_two_different_ways">Same structured data marked up in two different ways</h3>
